# code-handout

./: README.md  code-handout.sty  codehandout.sty  install.bat  install.sh
handout-pygments-plugin/: handout_lexers.py  handout_style.py  pyproject.toml
pygments-plugin/: code-handout-lexers.py  code-handout-style.py  code_handout_lexers.py  code_handout_style.py  preview-pygments.py  pyproject.toml
pygments-plugin/tests/: preview-pygments.py
