[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "handout" # change this to a package name for your plugin
version = "0.0.2"
dependencies = ["pygments"]
# readme = "README.md"

[tool.hatch.build.targets.wheel]
packages = ["."]

[project.entry-points."pygments.lexers"]
csharp_handout = "handout_lexers:ImprovedCSharpLexer"

# [project.entry-points."pygments.formatters"]
# handout = "handout_formatter:HandoutFormatter"

[project.entry-points."pygments.styles"]
handout = "handout_style:HandoutStyle"

# [project.entry-points."pygments.filters"]
# handout = "handout_filter:HandoutFilter"
