[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "handout" # change this to a package name for your plugin
version = "0.0.2"
dependencies = ["pygments"]
# readme = "README.md"

[tool.hatch.build.targets.wheel]
packages = ["."]

[project.entry-points."pygments.lexers"]
csharp_handout = "code-handout-lexers:ImprovedCSharpLexer"

# [project.entry-points."pygments.formatters"]
# handout = "code-handout-formatter:HandoutFormatter"

[project.entry-points."pygments.styles"]
handout = "code-handout-style:HandoutStyle"

# [project.entry-points."pygments.filters"]
# handout = "code-handout-filter:HandoutFilter"
