[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "handout" # change this to a package name for your plugin
version = "0.1.0"
dependencies = ["pygments"]
# readme = "README.md"

[tool.hatch.build.targets.wheel]
packages = ["."]

[project.entry-points."pygments.lexers"]
csharp_handout = "code_handout_lexers:ImprovedCSharpLexer"

[project.entry-points."pygments.styles"]
handout = "code_handout_style:HandoutStyle"
